apps/pikaraoke/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikaraoke-ingress
  annotations:
    cluster-config/suffix-host: "true"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: karaoke.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pikaraoke-svc
                port:
                  name: 5555-tcp
